--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,26 @@
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto;
+    grid-template-rows: 80px 80px 80px 80px 80px 80px 80px 80px 80px 80px;
   }
 
 .item1 {
-    grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column: 1 / 4;
+    grid-row: 1 / 4;
     background-color: blue;
-    height: 20px;
+    height: 300px;
+  }
+
+.item2 {
+    grid-column: 2 / 5;
+    grid-row: 2 / 5;
+    background-color: yellow;
+    height: 300px;
+  }
+
+.item3 {
+    grid-column: 3 / 6;
+    grid-row: 3 / 6;
+    background-color: red;
+    height: 300px;
   }
