--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,3 +24,35 @@
     background-color: red;
     height: 300px;
   }
+
+.item4 {
+    grid-column: 4 / 7;
+    grid-row: 4 / 7;
+    background-color: cyan;
+    height: 300px;
+  }
+
+.item5 {
+    grid-column: 5 / 8;
+    grid-row: 5 / 8;
+    background-color: green;
+    height: 300px;
+  }
+
+.item6 {
+    grid-column: 6 / 9;
+    grid-row: 6 / 9;
+    background-color: magenta;
+    height: 300px;
+  }
+
+.item7 {
+    grid-column: 7 / 10;
+    grid-row: 7 / 10;
+    background-color: black;
+    height: 300px;
+  }
+
+.fullwidth{
+    grid-column: 1 / span 12;
+}
