--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,83 +1,118 @@
+body{
+  background-color: black;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto;
     grid-template-rows: 80px 80px 80px 80px 80px 80px 80px 80px 80px 80px;
+    position: relative;
+    z-index: 1;
   }
 
 .item1 {
     grid-column: 1 / 4;
     grid-row: 1 / 4;
-    background-color: blue;
-    height: 300px;
+    background-color: black;
   }
+
+.text1{
+    grid-column: 10 / 13;
+    font-size: 5em;
+    font-family: sans-serif;
+}
 
 .item2 {
     grid-column: 2 / 5;
     grid-row: 2 / 5;
-    background-color: yellow;
-    height: 300px;
+    background-color: black;
   }
 
 .item3 {
     grid-column: 3 / 6;
     grid-row: 3 / 6;
-    background-color: red;
-    height: 300px;
+    background-color: black;
   }
 
 .item4 {
     grid-column: 4 / 7;
     grid-row: 4 / 7;
-    background-color: cyan;
-    height: 300px;
+    background-color: black;
   }
 
 .item5 {
     grid-column: 5 / 8;
     grid-row: 5 / 8;
-    background-color: green;
-    height: 300px;
+    background-color: black;
   }
 
 .item6 {
     grid-column: 6 / 9;
     grid-row: 6 / 9;
-    background-color: magenta;
-    height: 300px;
+    background-color: black;
   }
 
 .item7 {
     grid-column: 7 / 10;
     grid-row: 7 / 10;
     background-color: black;
+  }
+
+  .item8 {
+    grid-column: 8 / 11;
+    grid-row: 8 / 11;
+    background-color: black;
     height: 300px;
   }
 
-.text1 {
-    position: relative;
-    font-size: 20em;
-    z-index: 2;
+.item9 {
+    grid-column: 9 / 12;
+    grid-row: 9 / 12;
+    background-color: black;
+    height: 300px;
+  }
+
+.item10 {
+    grid-column: 10 / 13;
+    grid-row: 10 / 13;
+    background-color: black;
+    height: 300px;
 }
 
 .fullwidth{
     grid-column: 1 / span 12;
 }
 
-.low{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-}
-
-.bgText {
-    position: relative;
-    z-index: -1;
-    font-size: 20em;
-    color: lightsalmon;
-}
-
 #rh{
-    position: relative;
     z-index: 2;
+}
+
+#text-grid-container{
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto;
+  grid-template-rows: 80px 80px 80px 80px 80px 80px 80px 80px 80px 80px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+}
+
+.xlg{
+  font-size: 20em;
+}
+
+.lg{
+  font-size: 20em;
+}
+
+.med{
+  font-size: 10em;
+}
+
+.sm{
+  font-size: 5em;
+}
+
+.xs{
+  font-size: 2em;
 }
