--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -28,11 +28,25 @@ body{
     background-color: black;
   }
 
+.text2{
+    grid-column: 6 / 13;
+    grid-row: 2;
+    font-size: 5em;
+    font-family: sans-serif;
+}
+
 .item3 {
     grid-column: 3 / 6;
     grid-row: 3 / 6;
     background-color: black;
   }
+
+.text3{
+    grid-column: 12 / 13;
+    grid-row: 3;
+    font-size: 5em;
+    font-family: sans-serif;
+}
 
 .item4 {
     grid-column: 4 / 7;
@@ -40,11 +54,25 @@ body{
     background-color: black;
   }
 
+.text4{
+    grid-column: 10 / 13;
+    grid-row: 4;
+    font-size: 5em;
+    font-family: sans-serif;
+}
+
 .item5 {
     grid-column: 5 / 8;
     grid-row: 5 / 8;
     background-color: black;
   }
+
+.text5{
+    grid-column: 11 / 13;
+    grid-row: 5;
+    font-size: 5em;
+    font-family: sans-serif;
+}
 
 .item6 {
     grid-column: 6 / 9;
