--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -126,34 +126,40 @@ body{
   z-index: 3;
 }
 
-.xlg{
-  font-size: 20em;
-}
-
-.lg{
-  font-size: 20em;
-}
-
-.med{
+.centeredLg{
+  position: absolute;
+  left: 50%;
   font-size: 10em;
-}
-
-.sm{
-  font-size: 5em;
-}
-
-.xs{
-  font-size: 2em;
+  text-align: center;
+  color: white;
 }
 
 .star1{
   grid-column: 2 / 6;
   grid-row: 1;
-  /* display: none; */
+  display: none;
+}
+
+.star2{
+  grid-column: 10;
+  grid-row: 3;
+  display: none;
+}
+
+.star3{
+  grid-column: 12;
+  grid-row: 1;
+  display: none;
+}
+
+.star4{
+  grid-column: 4;
+  grid-row: 6;
+  display: none;
 }
 
 /* from https://css-tricks.com/the-shapes-of-css/ */
-#star-five {
+.star-five {
   margin: 50px 0;
   position: relative;
   display: block;
@@ -164,7 +170,7 @@ body{
   border-left: 100px solid transparent;
   transform: rotate(35deg);
 }
-#star-five:before {
+.star-five:before {
   border-bottom: 80px solid white;
   border-left: 30px solid transparent;
   border-right: 30px solid transparent;
@@ -177,7 +183,45 @@ body{
   content: '';
   transform: rotate(-35deg);
 }
-#star-five:after {
+.star-five:after {
+  position: absolute;
+  display: block;
+  top: 3px;
+  left: -105px;
+  width: 0px;
+  height: 0px;
+  border-right: 100px solid transparent;
+  border-bottom: 70px solid white;
+  border-left: 100px solid transparent;
+  transform: rotate(-70deg);
+  content: '';
+}
+
+.star-five-sm {
+  margin: 50px 0;
+  position: relative;
+  display: block;
+  width: 0px;
+  height: 0px;
+  border-right: 100px solid transparent;
+  border-bottom: 70px solid white;
+  border-left: 100px solid transparent;
+  transform: rotate(35deg);
+}
+.star-five-sm:before {
+  border-bottom: 80px solid white;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  position: absolute;
+  height: 0;
+  width: 0;
+  top: -45px;
+  left: -65px;
+  display: block;
+  content: '';
+  transform: rotate(-35deg);
+}
+.star-five-sm:after {
   position: absolute;
   display: block;
   top: 3px;
