--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -119,7 +119,7 @@ body{
 #text-grid-container{
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto;
-  grid-template-rows: 80px 80px 80px 80px 80px 80px 80px 80px 80px 80px;
+  /* grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px; */
   position: absolute;
   top: 0;
   left: 0;
@@ -155,6 +155,18 @@ body{
 .star4{
   grid-column: 4;
   grid-row: 6;
+  display: none;
+}
+
+.star5{
+  grid-column: 11;
+  grid-row: 5;
+  display: none;
+}
+
+.star6{
+  grid-column: 5;
+  grid-row: 2;
   display: none;
 }
 
