--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,8 @@
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body{
   background-color: black;
 }
@@ -194,44 +199,6 @@ body{
   transform: rotate(-35deg);
 }
 .star-five:after {
-  position: absolute;
-  display: block;
-  top: 3px;
-  left: -105px;
-  width: 0px;
-  height: 0px;
-  border-right: 100px solid transparent;
-  border-bottom: 70px solid white;
-  border-left: 100px solid transparent;
-  transform: rotate(-70deg);
-  content: '';
-}
-
-.star-five-sm {
-  margin: 50px 0;
-  position: relative;
-  display: block;
-  width: 0px;
-  height: 0px;
-  border-right: 100px solid transparent;
-  border-bottom: 70px solid white;
-  border-left: 100px solid transparent;
-  transform: rotate(35deg);
-}
-.star-five-sm:before {
-  border-bottom: 80px solid white;
-  border-left: 30px solid transparent;
-  border-right: 30px solid transparent;
-  position: absolute;
-  height: 0;
-  width: 0;
-  top: -45px;
-  left: -65px;
-  display: block;
-  content: '';
-  transform: rotate(-35deg);
-}
-.star-five-sm:after {
   position: absolute;
   display: block;
   top: 3px;
