--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -143,6 +143,8 @@ body{
   display: none;
 }
 
+.star1 :hover { display: block; }
+
 .star2{
   grid-column: 10;
   grid-row: 3;
@@ -157,7 +159,7 @@ body{
 
 .star4{
   grid-column: 4;
-  grid-row: 6;
+  grid-row: 2;
   display: none;
 }
 
@@ -169,7 +171,19 @@ body{
 
 .star6{
   grid-column: 5;
-  grid-row: 2;
+  grid-row: 6;
+  display: none;
+}
+
+.star7{
+  grid-column: 3;
+  grid-row: 8;
+  display: none;
+}
+
+.star8{
+  grid-column: 9;
+  grid-row: 7;
   display: none;
 }
 
