--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -185,6 +185,30 @@ body{
   display: none;
 }
 
+.star9{
+  grid-column: 11;
+  grid-row: 5;
+  display: none;
+}
+
+.star10{
+  grid-column: 5;
+  grid-row: 6;
+  display: none;
+}
+
+.star11{
+  grid-column: 3;
+  grid-row: 8;
+  display: none;
+}
+
+.star12{
+  grid-column: 9;
+  grid-row: 7;
+  display: none;
+}
+
 /* from https://css-tricks.com/the-shapes-of-css/ */
 .star-five {
   margin: 50px 0;
