--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -299,7 +299,7 @@ body{
 .gentlemen1{
   font-family: 'Righteous', cursive;
   font-size: 10em;
-  grid-column: 3;
+  grid-column: 2;
   grid-row: 3;
   text-align: center;
   color: #2B04E8;
@@ -308,7 +308,7 @@ body{
 .gentlemen2{
   font-family: 'Righteous', cursive;
   font-size: 10em;
-  grid-column: 3;
+  grid-column: 2;
   grid-row: 4;
   text-align: center;
   color: #4A40FF;
@@ -317,7 +317,7 @@ body{
 .gentlemen3{
   font-family: 'Righteous', cursive;
   font-size: 10em;
-  grid-column: 3;
+  grid-column: 2;
   grid-row: 5;
   text-align: center;
   color: #5009FF;
@@ -326,7 +326,7 @@ body{
 .gentlemen4{
   font-family: 'Righteous', cursive;
   font-size: 10em;
-  grid-column: 3;
+  grid-column: 2;
   grid-row: 6;
   text-align: center;
   color: #6A12E8;
@@ -335,7 +335,7 @@ body{
 .gentlemen5{
   font-family: 'Righteous', cursive;
   font-size: 10em;
-  grid-column: 3;
+  grid-column: 2;
   grid-row: 7;
   text-align: center;
   color: #8B09FF;
@@ -343,7 +343,7 @@ body{
 
 .text-grid-container-3 {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto auto;
   grid-template-rows: 80px 80px 80px 80px;
   position: relative;
   z-index: 1;
@@ -352,7 +352,8 @@ body{
 .speed{
   font-family: 'Fugaz One', cursive;
   font-size: 5em;
-  grid-row: 1;
+  grid-row: 1/3;
   grid-column: 1;
+  text-align: center;
   color:#FF3320;
 }
