--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -344,16 +344,16 @@ body{
 .text-grid-container-3 {
   display: grid;
   grid-template-columns: auto auto;
-  grid-template-rows: 80px 80px 80px 80px;
+  grid-template-rows: 30px 30px 30px 30px 30px 30px 30px 30px;
   position: relative;
   z-index: 1;
 }
 
-.speed{
+.speed1{
   font-family: 'Fugaz One', cursive;
-  font-size: 5em;
+  font-size: 8em;
   grid-row: 1/3;
   grid-column: 1;
   text-align: center;
-  color:#FF3320;
+  color:#8C0327;
 }
