--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -343,7 +343,7 @@ body{
 
 .text-grid-container-3 {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto;
   grid-template-rows: 30px 30px 30px 30px 30px 30px 30px 30px;
   position: relative;
   z-index: 1;
@@ -351,9 +351,45 @@ body{
 
 .speed1{
   font-family: 'Fugaz One', cursive;
-  font-size: 8em;
-  grid-row: 1/3;
+  font-size: 5em;
+  grid-row: 1;
   grid-column: 1;
   text-align: center;
   color:#8C0327;
+}
+
+.speed2{
+  font-family: 'Fugaz One', cursive;
+  font-size: 5em;
+  grid-row: 2;
+  grid-column: 2;
+  text-align: center;
+  color:#D93636;
+}
+
+.speed3{
+  font-family: 'Fugaz One', cursive;
+  font-size: 5em;
+  grid-row: 3;
+  grid-column: 3;
+  text-align: center;
+  color:#80D2F2;
+}
+
+.speed4{
+  font-family: 'Fugaz One', cursive;
+  font-size: 5em;
+  grid-row: 4;
+  grid-column: 4;
+  text-align: center;
+  color:#033E8C;
+}
+
+.speed5{
+  font-family: 'Fugaz One', cursive;
+  font-size: 5em;
+  grid-row: 5;
+  grid-column: 5;
+  text-align: center;
+  color:#053BA6;
 }
