--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -397,7 +397,7 @@ body{
 .text-grid-container-4 {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: 80px 80px 80px;
+  grid-template-rows: 80px 80px 80px 80px 80px 80px;
   position: relative;
   z-index: 1;
 }
@@ -405,8 +405,8 @@ body{
 .andmaythebest{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 5em;
-  letter-spacing: 10px;
-  grid-row: 3;
+  letter-spacing: 15px;
+  grid-row: 4;
   grid-column: 1;
   text-align: center;
   color:#FFFFFF;
