--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -123,7 +123,7 @@ body{
 
 .star-grid-container{
   display: grid;
-  grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto;
+  grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
   grid-template-rows: 120px 120px 120px 120px 120px 120px 120px 120px 120px 120px 120px 120px 120px;
   position: relative;
   z-index: 1;
@@ -131,7 +131,8 @@ body{
 
 .centeredLg{
   position: absolute;
-  left: 50%;
+  font-family: 'Righteous', cursive;
+  grid-row: 6;
   font-size: 10em;
   text-align: center;
   color: white;
