--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -123,7 +123,7 @@ body{
 
 .star-grid-container{
   display: grid;
-  grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
+  grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto;
   grid-template-rows: 120px 120px 120px 120px 120px 120px 120px 120px 120px 120px 120px 120px 120px;
   position: relative;
   z-index: 1;
