--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -132,50 +132,50 @@ body{
 .centeredLg{
   position: absolute;
   font-family: 'Righteous', cursive;
-  grid-row: 5;
+  left: 50%;
   font-size: 10em;
   text-align: center;
   color: white;
 }
 
 .star1{
-  grid-column: 2;
+  grid-column: 2 / 6;
   grid-row: 1;
   display: none;
 }
 
 .star2{
-  grid-column: 3;
+  grid-column: 10;
   grid-row: 3;
   display: none;
 }
 
 .star3{
   grid-column: 12;
-  grid-row: 2;
+  grid-row: 1;
   display: none;
 }
 
 .star4{
-  grid-column: 1;
-  grid-row: 3;
+  grid-column: 4;
+  grid-row: 2;
   display: none;
 }
 
 .star5{
   grid-column: 11;
-  grid-row: 7;
+  grid-row: 5;
   display: none;
 }
 
 .star6{
-  grid-column: 3;
+  grid-column: 5;
   grid-row: 6;
   display: none;
 }
 
 .star7{
-  grid-column: 1;
+  grid-column: 3;
   grid-row: 8;
   display: none;
 }
