--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -180,7 +180,6 @@ body{
   display: none;
 }
 
-
 /* from https://css-tricks.com/the-shapes-of-css/ */
 .star-five {
   margin: 50px 0;
@@ -380,6 +379,14 @@ body{
   letter-spacing: 15px;
   grid-row: 4;
   grid-column: 1;
+  text-align: center;
+  color:#FFFFFF;
+}
+
+.win-container{
+  width: 100%;
+  height: auto;
+  font-size: 20em;
   text-align: center;
   color:#FFFFFF;
 }
