--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -386,6 +386,7 @@ body{
 .win-container{
   width: 100%;
   height: auto;
+  font-family: ;
   font-size: 40em;
   text-align: center;
   color:#FFFFFF;
