--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -383,7 +383,8 @@ body{
   color:#FFFFFF;
 }
 
-.win-container{
+.win{
+  position: relative;
   width: 100%;
   height: auto;
   font-family: 'Bebas Neue', sans-serif;
