--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -392,3 +392,13 @@ body{
   text-align: center;
   color:#FFFFFF;
 }
+
+.win-top{
+  position: relative;
+  width: 100%;
+  height: auto;
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 60em;
+  text-align: center;
+  color:#FFFFFF;
+}
