--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -402,7 +402,7 @@ body{
   position: absolute;
   width: 100%;
   height: auto;
-  font-family: cursive;
+  font-family: 'Meie Script', cursive;
   font-size: 40em;
   text-align: center;
   color:#FFFFFF;
