--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -411,9 +411,22 @@ body{
 }
 
 .meme-cats{
+  width:100%;
+	max-width:960px; 
+	margin:0px auto;
+	padding:0px;
+	box-sizing:border-box;
 
+	display:flex;
+	flex-wrap:wrap;
+	flex-direction:row; 
+	align-content:flex-start; 
+	align-items:stretch; 
 }
 
-.cat1{
-  
+.half-cat{
+  margin:2%;
+	width:46%;
+	padding:2%;
+	box-sizing:border-box;
 }
