--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -424,6 +424,7 @@ body{
 }
 
 .half-cat{
+  position: relative;
   margin:2%;
 	width:46%;
 	padding:2%;
@@ -431,6 +432,7 @@ body{
 }
 
 .third-cat{
+  position: relative;
   margin:2%;
 	width:29.33333333%;
 	padding:2%;
@@ -446,4 +448,17 @@ body{
 
 img {
   max-width: 100%;
+}
+
+.overlay { /* Overlay from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_image_overlay_fade */
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* height: 100%; */
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color:rgb(0,0,0) ;
 }
