--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -458,7 +458,15 @@ img {
   right: 0;
   /* height: 100%; */
   width: 100%;
-  opacity: 0;
+  opacity: 1;
   transition: .5s ease;
   background-color:rgb(0,0,0) ;
+}
+
+.half-cat:hover .overlay {
+  opacity: 0;
+}
+
+.third-cat:hover .overlay {
+  opacity: 0;
 }
